--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,6 +23,26 @@ body {
   color: #ffffff; /* Texto claro */
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  min-height: calc(100vh - 50px); /* Ajuste 50px para o tamanho do footer */
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+  background-color: #f8f9fa;
+  padding: 15px;
+  text-align: center;
+}
+
+
 .form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
   color: var(--bs-secondary-color);
   text-align: end;
